--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Parmod Bisht</h1>
         <p><em>Support Engineer in <strong><a href="https://www.taboola.com/">Taboola India</a></strong></em></p>
         <p>
-          Working as an 1st level support engineer and handing many projects such as
+          Working as an 1st level support engineer and handling many projects such as
           Chat procees, inovation lab.
         </p>
         <h4><em><a href="/Users/parmod.s/Desktop/Web Development/HTML - Personal site/Contact.html">Contact Me</a></em></h4>
