--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <tbody>
       <tr>
         <td>2014-2016</td>
-        <td>Working with Precision Pvt Ltd</td>
+        <td>Worked with Precision Pvt Ltd</td>
       </tr>
       <tr>
         <td>2017</td>
-        <td>Working with Citixsys India Ltd</td>
+        <td>Worked with Citixsys India Ltd</td>
       </tr>
     </tbody>
 
